# CMake-Nuget

./: CMakeLists.txt  CMakePresets.json  README.md  vcpkg.json
.github/workflows/: ci.yaml
ClassLibrary/: CMakeLists.txt  Class.cs  Class2.cs
NativeLibrary/: CMakeLists.txt  Source.cpp  version.rc.in
