cmake_minimum_required(VERSION 3.25)
project(CMakeNuget)

include(GNUInstallDirs)
set(FOO_LIBRARY_INSTALL_DIR "${CMAKE_INSTALL_LIBDIR}")
add_subdirectory(NativeLibrary)
if(MSVC)
  add_subdirectory(ClassLibrary)
endif()

set(CPACK_NUGET_PACKAGE_DEBUG ON)
set(CPACK_BINARY_NSIS OFF)
set(CPACK_BINARY_NUGET ON)
set(CPACK_NUGET_PACKAGE_TAGS "native")
#set(CPACK_NUGET_PACKAGE_DEPENDENCIES "targetFramework")
#set(CPACK_NUGET_PACKAGE_DEPENDENCIES_targetFramework_VERSION "net5.0")
set(CPACK_PACKAGE_NAME "cmake-nuget")
set(CPACK_PACKAGE_VERSION_MAJOR 1)
set(CPACK_PACKAGE_VERSION_MINOR 0)
set(CPACK_PACKAGE_VERSION_PATCH 0)
include(CPack)
